--- a/culinary.ipynb
+++ b/culinary.ipynb
@@ -430,6 +430,7 @@
     "for cookie in df['cookie'].unique():\n",
     "    c, d, y = di[di['cookie'] == cookie].values[0]\n",
     "    print(f\"\\n# {c}, yield = {y}\\n\")\n",
+    "    print(f\"![alt text](pictures/{cookie}.jpg)\")\n",
     "    print(d)\n",
     "    ingred_table = df[df['cookie'] == cookie][df.columns[1:]].set_index('quantity').drop(columns='pint_unit')\n",
     "    ingred_table.fillna('', inplace=True)\n",
