--- a/culinary.ipynb
+++ b/culinary.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,17 @@
       "\n",
       "# Tate's Chocolate Chip Cookies, yield = 54\n",
       "\n",
-      "Preheat the oven to 350 degrees. Grease two cookie sheets or line them with Silpat.   In a large bowl, stir together the flour, baking soda, and salt.   In another large bowl, cream the butter and sugars. Add the water and vanilla. Mix the ingredients until they are just combined. Add the eggs and mix them lightly; Stir in the flour mixture. Fold in the chocolate chips. Don’t overmix the dough.   Drop the cookies 2 inches apart onto the prepared cookie sheets using two tablespoons or an ice cream scoop. Flatten out cookie.  Bake them for 12 minutes or until the edges and centers are brown. Remove the cookies to a wire rack to cool.\n",
+      "![alt text](\"pictures/Tate's Chocolate Chip Cookies.jpg\")\n",
+      "\n",
+      "Preheat the oven to 350 degrees. Grease two cookie sheets or line them with Silpat. \n",
+      "\n",
+      "In a large bowl, stir together the flour, baking soda, and salt. \n",
+      "\n",
+      "In another large bowl, cream the butter and sugars. Add the water and vanilla. Mix the ingredients until they are just combined. Add the eggs and mix them lightly; Stir in the flour mixture. Fold in the chocolate chips. Don’t overmix the dough. \n",
+      "\n",
+      "Drop the cookies 2 inches apart onto the prepared cookie sheets using two tablespoons or an ice cream scoop. Flatten out cookie.\n",
+      "\n",
+      "Bake them for 12 minutes or until the edges and centers are brown. Remove the cookies to a wire rack to cool.\n",
       "\n",
       "\n",
       "|   quantity | unit     | ingredient                | notes                                   |\n",
@@ -328,7 +338,15 @@
       "\n",
       "# Magic Cookie Bars, yield = 36\n",
       "\n",
-      "Preheat oven to 350° F. In 13x9 inch baking pan, melt margarine in oven. Sprinkle crumbs over margarine; pour eagle brand evenly over crumbs. Top with remaining ingredients; press down firmly. Bake 25 to 30 minutes or until lightly browned. Cool. Chill throughly if desired. Cut into bars.\n",
+      "![alt text](\"pictures/Magic Cookie Bars.jpg\")\n",
+      "\n",
+      "Preheat oven to 350° F. In 13x9 inch baking pan, melt margarine in oven. \n",
+      "\n",
+      "Sprinkle crumbs over margarine; pour eagle brand evenly over crumbs. \n",
+      "\n",
+      "Top with remaining ingredients; press down firmly. Bake 25 to 30 minutes or until lightly browned. \n",
+      "\n",
+      "Cool. Chill throughly if desired. Cut into bars.\n",
       "\n",
       "\n",
       "|   quantity | unit   | ingredient                | notes                                 |\n",
@@ -342,7 +360,17 @@
       "\n",
       "# Peanut Butter Cluster Kisses, yield = 60\n",
       "\n",
-      "Preheat oven to 375°. In large mixer bowl beat Eagle Brand and peanut butter until smooth. Add biscuit mix and vanilla; mix well. Shape into 1-inch balls. Roll in sugar. Place 2 inches apart on ungreased baking sheets. Bake 6 to 8 minutes or until lightly browned (do not overtake). Press hershey kiss in center of each ball immediately after baking.\n",
+      "![alt text](\"pictures/Peanut Butter Cluster Kisses.jpg\")\n",
+      "\n",
+      "Preheat oven to 375°. In large mixer bowl beat Eagle Brand and peanut butter until smooth. \n",
+      "\n",
+      "Add biscuit mix and vanilla; mix well. Shape into 1-inch balls. Roll in sugar. \n",
+      "\n",
+      "Place 2 inches apart on ungreased baking sheets. \n",
+      "\n",
+      "Bake 6 to 8 minutes or until lightly browned (do not overtake). \n",
+      "\n",
+      "Press hershey kiss in center of each ball immediately after baking.\n",
       "\n",
       "\n",
       "|   quantity | unit     | ingredient               | notes                                 |\n",
@@ -356,7 +384,15 @@
       "\n",
       "# Forgotten Cookies, yield = 24\n",
       "\n",
-      "Heat oven to 350 degrees F. Beat egg whites with salt until foamy, gradually add sugar and beat until stiff. Fold in remaining ingredients. Drop onto aluminum foil lined cookie sheet by teaspoon. Place in oven. Turn off oven immediately. Leave in oven until completely cool, or overnight.\n",
+      "![alt text](\"pictures/Forgotten Cookies.jpg\")\n",
+      "\n",
+      "Heat oven to 350 degrees F. \n",
+      "\n",
+      "Beat egg whites with salt until foamy, gradually add sugar and beat until stiff. \n",
+      "\n",
+      "Fold in remaining ingredients. Drop onto aluminum foil lined cookie sheet by teaspoon. \n",
+      "\n",
+      "Place in oven. Turn off oven immediately. Leave in oven until completely cool, or overnight.\n",
       "\n",
       "\n",
       "|   quantity | unit     | ingredient                     | notes    |\n",
@@ -430,7 +466,7 @@
     "for cookie in df['cookie'].unique():\n",
     "    c, d, y = di[di['cookie'] == cookie].values[0]\n",
     "    print(f\"\\n# {c}, yield = {y}\\n\")\n",
-    "    print(f\"![alt text](pictures/{cookie}.jpg)\")\n",
+    "    print(f\"![alt text](\\\"pictures/{cookie}.jpg\\\")\\n\")\n",
     "    print(d)\n",
     "    ingred_table = df[df['cookie'] == cookie][df.columns[1:]].set_index('quantity').drop(columns='pint_unit')\n",
     "    ingred_table.fillna('', inplace=True)\n",
