--- a/culinary.ipynb
+++ b/culinary.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
       "\n",
       "# Tate's Chocolate Chip Cookies, yield = 54\n",
       "\n",
-      "![alt text](\"pictures/Tate's Chocolate Chip Cookies.jpg\")\n",
+      "![alt text](pictures/TatesChocolateChipCookies.jpg)\n",
       "\n",
       "Preheat the oven to 350 degrees. Grease two cookie sheets or line them with Silpat. \n",
       "\n",
@@ -338,7 +338,7 @@
       "\n",
       "# Magic Cookie Bars, yield = 36\n",
       "\n",
-      "![alt text](\"pictures/Magic Cookie Bars.jpg\")\n",
+      "![alt text](pictures/MagicCookieBars.jpg)\n",
       "\n",
       "Preheat oven to 350° F. In 13x9 inch baking pan, melt margarine in oven. \n",
       "\n",
@@ -360,7 +360,7 @@
       "\n",
       "# Peanut Butter Cluster Kisses, yield = 60\n",
       "\n",
-      "![alt text](\"pictures/Peanut Butter Cluster Kisses.jpg\")\n",
+      "![alt text](pictures/PeanutButterClusterKisses.jpg)\n",
       "\n",
       "Preheat oven to 375°. In large mixer bowl beat Eagle Brand and peanut butter until smooth. \n",
       "\n",
@@ -384,7 +384,7 @@
       "\n",
       "# Forgotten Cookies, yield = 24\n",
       "\n",
-      "![alt text](\"pictures/Forgotten Cookies.jpg\")\n",
+      "![alt text](pictures/ForgottenCookies.jpg)\n",
       "\n",
       "Heat oven to 350 degrees F. \n",
       "\n",
@@ -466,7 +466,8 @@
     "for cookie in df['cookie'].unique():\n",
     "    c, d, y = di[di['cookie'] == cookie].values[0]\n",
     "    print(f\"\\n# {c}, yield = {y}\\n\")\n",
-    "    print(f\"![alt text](\\\"pictures/{cookie}.jpg\\\")\\n\")\n",
+    "    c = re.sub('\\W+', '', c)\n",
+    "    print(f\"![alt text](pictures/{c}.jpg)\\n\")\n",
     "    print(d)\n",
     "    ingred_table = df[df['cookie'] == cookie][df.columns[1:]].set_index('quantity').drop(columns='pint_unit')\n",
     "    ingred_table.fillna('', inplace=True)\n",
@@ -476,6 +477,27 @@
     "\n",
     "print('\\n# All Ingredients\\nall ingredients for all cookies are here\\n')\n",
     "print(tabulate(all_ingreds, tablefmt=\"pipe\", headers=\"keys\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'TatesCoo'"
+      ]
+     },
+     "execution_count": 270,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "re.sub('\\W+', '', \"Tate's Coo\")"
    ]
   },
   {
